# pypi-ish

./: .env  .gitignore  environment.yaml  kdeploy.yaml  mypy.ini  pyproject.toml  tox.ini  web.config
migrations/: env.py
migrations/versions/: 6199808e5932_.py
pypi/: __init__.py  config.py  helpers.py  models.py  routes.py
templates/: base.html  index.html  project.html  upload_file.html
tests/: conftest.py  test_helpers.py  test_models.py  test_routes.py
